fixed continue reading button alignment

--- a/sass/_archives.scss
+++ b/sass/_archives.scss
@@ -110,7 +110,8 @@
         margin-right: $column;
       }
     }
-    .post-header {
+    .post-header,
+    .post-content {
       text-align: left;
     }
   }
@@ -132,9 +133,6 @@
         width: 100%;
         float: none;
 
-        .post-header {
-          text-align: center;
-        }
         .post-title {
           font-size: 3.188em; /* 51px / 16px */
           line-height: 1.314; /* 67px */
@@ -142,6 +140,7 @@
         .post-header,
         .post-content {
           padding: 0 $column * 2 * 1.09;
+          text-align: center;
         }
       }
     }
